--- a/Index.html
+++ b/Index.html
@@ -36,8 +36,12 @@
     <main>
         <div class="présentation">
             <h2>Présentation</h2>
-            <hr>
-            <p>L'ASEA (ou Alliance pour la Sécurité Economique Aleucie</p>
+
+            <p>L'ASEA (ou Alliance pour la Sécurité Economique Aleucie) est une alliance écomomique et politique sur le continent d'Aleucie sur le jeu de rôle géopolitique de Géokratos.</p>
+            <!--Les pays membres de l'ASEA-->
+            <a href=""><img src=""></a>
+            <!--mappemonde-->
+            <a href="" class="lien_mapmonde">Voir la made monde de Géokratos</a>
         </div>
         <div class="Actualité">
             <h2>Actualité</h2>
@@ -47,7 +51,7 @@
             <article>
 
             </article>
-            <a class="navig_article"></a>Voir plus d’actualités et d’événements →</a>
+            <a href="" class="navig_article"></a>Voir plus d’actualités et d’événements →</a>
         </div>
     </main>
     <footer>
