--- a/Index.html
+++ b/Index.html
@@ -23,11 +23,11 @@
     </header>
     <nav>
         <ul class="navigation_site">
-            <li><a href="Index.html" class="page_actuel"><b>Accueil</b></a></li>
+            <li><a href="Pages/Accueil.html" class="navig_page"><b>Accueil</b></a></li>
             <li><a href="" class="navig_page"><b>Les Pays</b></a></li>
             <li><a href="" class="navig_page"><b>Les Institutions</b></a></li>
-            <li><a href="" class="navig_page"><b>l'Actualité</b></a></li>
-            <li><a href="" class="navig_page"><b>Contactez l'ASEA</b></a></li>
+            <li><a href="" class="navig_page"><b>Les Conférences</b></a></li>
+            <li><a href="Index.html" class="page_actuel"><b>A propos</b></a></li>
         </ul>
     </nav>
     <h1>Alliance pour la Sécurité Économique Aleucienne</h1>
@@ -35,23 +35,13 @@
     </div>
     <main>
         <div class="présentation">
-            <h2>Présentation</h2>
+            <h2>A propos</h2>
+            <h3>L'auteur</h3>
+            <p>L'auteur de site, Jbard14, a réalisé ce site internet dans le cadre d'un projet dans le cadre de sa formation en BUT Réseaux et Telecommunications.</p>
+            <h4>Note:</h4>
+            Jbard14 n'est pas l'auteur et/ou le propriétaire du site de jeux de rôle de géopolitique <a href="https://geokratos.com/">Géokratos</a>. Il ne l'a réalisé que dans un but de démonstration dans le cadre de ses études.
+            <h3>Le plan du site</h3>
 
-            <p>L'ASEA (ou Alliance pour la Sécurité Economique Aleucie) est une alliance écomomique et politique sur le continent d'Aleucie sur le jeu de rôle géopolitique de Géokratos.</p>
-            <!--Les pays membres de l'ASEA-->
-            <a href=""><img src=""></a>
-            <!--mappemonde-->
-            <a href="" class="lien_mapmonde">Voir la made monde de Géokratos</a>
-        </div>
-        <div class="Actualité">
-            <h2>Actualité</h2>
-            <article>
-
-            </article>
-            <article>
-
-            </article>
-            <a href="" class="navig_article"></a>Voir plus d’actualités et d’événements →</a>
         </div>
     </main>
     <footer>
